use default component conventions

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-cloak ng-strict-di ng-controller="AppCtrl as app">
+<html ng-cloak ng-strict-di ng-controller="AppController as app">
 	<head>
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="/index.css">
