refine some controller issues and set up the create album page

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
 		<!-- endinject -->
 		<script>
 			System.import('index').then(function() {
-				angular.bootstrap(document, ['app']);
+				angular.element(document).ready(function() {
+					angular.bootstrap(document, ['app']);
+				});
 			});
 		</script>
 	</body>
